@@ -369,6 +369,7 @@ sub create {
 
 	} elsif ( scalar(@_) == 1 ) {
 		my $key = shift;				# ( keyname, key )
+		$class->_deprecate('create( $key_name, $key )');
 		return new Net::DNS::RR(
 			name => $karg,
 			type => 'TSIG',
@@ -709,10 +710,6 @@ needed for TSIG-GSS.
 
 Returns a TSIG RR constructed using the parameters in the specified
 key file, which is assumed to have been generated by dnssec-keygen.
-
-    $tsig = create Net::DNS::RR::TSIG( $keyname, $key );
-
-The two argument form is supported for backward compatibility.
 
 =head2 verify
 
